tests/snapshots/snapshot_parsing__c_symbols.snap
---
source: tests/snapshot_parsing.rs
expression: symbols
---
- kind: Struct
  line_end: 9
  line_start: 6
  name: Config
- kind: Enum
  line_end: 15
  line_start: 11
  name: Status
- kind: TypeAlias
  line_end: 17
  line_start: 17
  name: ConfigAlias
- kind: Struct
  line_end: 17
  line_start: 17
  name: Config
- kind: Struct
  line_end: 19
  line_start: 19
  name: Config
- kind: Function
  line_end: 21
  line_start: 19
  name: validate_config
- kind: Struct
  line_end: 23
  line_start: 23
  name: Config
- kind: Function
  line_end: 27
  line_start: 23
  name: process_config
