tests/snapshots/snapshot_parsing__cpp_symbols.snap
---
source: tests/snapshot_parsing.rs
expression: symbols
---
- kind: Class
  line_end: 16
  line_start: 6
  name: Config
- kind: Function
  line_end: 11
  line_start: 11
  name: Config
- kind: Struct
  line_end: 21
  line_start: 18
  name: Point
- kind: Enum
  line_end: 27
  line_start: 23
  name: Status
- kind: Function
  line_end: 35
  line_start: 31
  name: process_config
