tests/snapshots/snapshot_parsing__ruby_symbols.snap
---
source: tests/snapshot_parsing.rs
expression: symbols
---
- kind: Module
  line_end: 33
  line_start: 3
  name: Sample
- kind: Class
  line_end: 15
  line_start: 4
  name: Config
- kind: Method
  line_end: 10
  line_start: 7
  name: initialize
- kind: Method
  line_end: 14
  line_start: 12
  name: validate
- kind: Class
  line_end: 26
  line_start: 17
  name: AdvancedConfig
- kind: Method
  line_end: 21
  line_start: 18
  name: initialize
- kind: Method
  line_end: 25
  line_start: 23
  name: validate
- kind: Function
  line_end: 32
  line_start: 28
  name: process_config
